--- a/src/app/single-page-application/componets/home/home.component.html
+++ b/src/app/single-page-application/componets/home/home.component.html
@@ -8,3 +8,7 @@
 
 <h1>im the header</h1>
 <gv-about></gv-about>
+
+<div class="admin-image">
+    <img src="assets/images/admin.jpg" alt="admin image" />
+</div>
