--- a/src/app/single-page-application/componets/home/home.component.scss
+++ b/src/app/single-page-application/componets/home/home.component.scss
@@ -16,3 +16,9 @@
 //         color: #fff;
 //     }
 // }
+
+.admin-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
