--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
+
 *,
 *::after,
 *::before {
@@ -6,18 +7,10 @@
     margin: 0;
     padding: 0;
 }
-// body {
-//     $primary-bg: #fafafa;
-//     $primary-color: #272727;
-//     font-family: "Poppins", sans-serif;
-
-// }
 
 body {
-    $primary-bg: #fafafa;
     margin: 0;
-    font-family: "Roboto", "Helvetica Neue", sans-serif;
-    background-color: $primary-bg;
+    font-family: "Poppins", "Helvetica Neue", sans-serif;
     width: 100vw;
     max-width: 100%;
     overflow-x: hidden;
