--- a/src/app/components/landing-page/landing-page.component.scss
+++ b/src/app/components/landing-page/landing-page.component.scss
@@ -4,7 +4,7 @@
     }
 }
 @mixin for-smaller-phone {
-    @media (max-width: 375px) {
+    @media (max-width: 440px) {
         @content;
     }
 }
@@ -126,6 +126,10 @@
 
                 @include for-phone() {
                     width: 598px;
+                }
+
+                @include for-smaller-phone() {
+                    width: 523px;
                 }
             }
         }
