--- a/src/app/layout/components/hero/hero.component.scss
+++ b/src/app/layout/components/hero/hero.component.scss
@@ -1,5 +1,3 @@
-
-
 $heading-color: #4e4e4e;
 $sub-heading-color: #747474;
 
@@ -15,123 +13,130 @@ $sub-heading-color: #747474;
     }
 }
 
+@mixin laptop {
+    @media (min-width: 800px) {
+        @content;
+    }
+}
 
-    .intro {
-        height: 100%;
-        display: flex;
-        justify-content: space-around;
+.intro {
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    @include for-phone() {
+        flex-direction: column-reverse;
+        justify-content: center;
         align-items: center;
+    }
 
-        @include for-phone() {
-            flex-direction: column-reverse;
-            justify-content: center;
-            align-items: center;
+    .intro-wrapper {
+        height: 60%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+
+        &__labels {
+            .title {
+                color: $heading-color;
+                font-size: 3rem;
+
+                @include for-phone() {
+                    text-align: center;
+                }
+
+                @include for-smaller-phone() {
+                    font-size: 2rem;
+                }
+            }
+            .sub-title {
+                color: $sub-heading-color;
+                font-size: 1.5rem;
+
+                @include for-phone() {
+                    text-align: center;
+                    font-size: 1.4rem;
+                }
+            }
+
+            @include for-phone() {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                margin-top: 60px;
+            }
         }
 
-        .intro-wrapper {
-            height: 60%;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
+        .skills {
+            ul {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                flex-wrap: wrap;
+                li {
+                    list-style: none;
+                    img {
+                        width: 70px;
+                        height: auto;
+                        object-fit: contain;
 
-            &__labels {
-                .title {
-                    color: $heading-color;
-                    font-size: 3rem;
-
-                    @include for-phone() {
-                        text-align: center;
+                        @include for-smaller-phone() {
+                            width: 58px;
+                        }
                     }
 
-                    @include for-smaller-phone() {
-                        font-size: 2rem;
-                    }
-                }
-                .sub-title {
-                    color: $sub-heading-color;
-                    font-size: 1.5rem;
-
                     @include for-phone() {
-                        text-align: center;
-                        font-size: 1.4rem;
+                        flex: 0 0 25%;
                     }
                 }
 
                 @include for-phone() {
-                    display: flex;
-                    flex-direction: column;
                     justify-content: center;
-                    align-items: center;
-                    margin-top: 60px;
-                }
-            }
-
-            .skills {
-                ul {
-                    display: flex;
-                    justify-content: space-between;
-                    align-items: center;
-                    flex-wrap: wrap;
-                    li {
-                        list-style: none;
-                        img {
-                            width: 70px;
-                            height: auto;
-                            object-fit: contain;
-
-                            @include for-smaller-phone() {
-                                width: 58px;
-                            }
-                        }
-
-                        @include for-phone() {
-                            flex: 0 0 25%;
-                        }
-                    }
-
-                    @include for-phone() {
-                        justify-content: center;
-                    }
-                }
-            }
-        }
-
-        .intro__visuals {
-            position: relative;
-            display: grid;
-            place-items: center;
-            .intro__image {
-                width: 500px;
-                height: auto;
-                object-fit: cover;
-                border-bottom-right-radius: 40%;
-                overflow: hidden;
-                z-index: 1;
-                filter: saturate(0.2);
-
-                @include for-phone() {
-                    width: 368px;
-                }
-
-                @include for-smaller-phone() {
-                    width: 366px;
-                }
-            }
-            .blob-bg {
-                position: absolute;
-                width: 700px;
-                height: auto;
-                object-fit: cover;
-                transform: translateX(9%);
-
-                @include for-phone() {
-                    width: 598px;
-                }
-
-                @include for-smaller-phone() {
-                    width: 523px;
                 }
             }
         }
     }
 
+    .intro__visuals {
+        position: relative;
+        display: grid;
+        place-items: center;
+
+        @include laptop() {
+            transform: translateY(-56px);
+        }
+        .intro__image {
+            width: 310px;
+            height: auto;
+            object-fit: cover;
+            border-bottom-right-radius: 40%;
+            overflow: hidden;
+            filter: saturate(0.2);
+
+            @include for-phone() {
+                width: 368px;
+            }
+
+            @include for-smaller-phone() {
+                width: 366px;
+            }
+        }
+        .blob-bg {
+            position: absolute;
+            width: 700px;
+            height: auto;
+            object-fit: cover;
+            transform: translateX(9%);
+
+            @include for-phone() {
+                width: 598px;
+            }
+
+            @include for-smaller-phone() {
+                width: 523px;
+            }
+        }
+    }
+}
